@@ -42,6 +42,9 @@ USECOLOR="yes"
 # Clear build cache dir
 # CLEAR_CACHE_DIR="yes"
 
+# Clear all tmp files and caches after genkernel has run
+#POSTCLEAR="1"
+
 # Genkernel uses an independent configuration for MAKEOPTS, and does not source
 # /etc/make.conf . You can override the default setting by uncommenting and
 # tweaking the following line. Default setting is set up by
@@ -85,6 +88,9 @@ USECOLOR="yes"
 # Add iSCSI support.
 # ISCSI="no"
 
+# Include support for unionfs
+#UNIONFS="1"
+
 # Enable copying of firmware into initramfs
 # FIRMWARE="no"
 # Specify directory to pull from
@@ -105,6 +111,17 @@ DISKLABEL="yes"
 # Also, SPLASH="yes" needs to be enabled for this one to one work.
 # This supersedes the "SPLASH_THEME" option of /etc/conf.d/splash (in early space).
 # SPLASH_THEME="gentoo"
+
+
+# =========Keymap Settings=========
+#
+# Force keymap selection at boot
+#DOKEYMAPAUTO="yes"
+
+
+# Disables keymap selection support
+#KEYMAP="0"
+
 
 # =========Low Level Compile Settings=========
 #
@@ -138,6 +155,16 @@ DISKLABEL="yes"
 # option.
 # UTILS_LD="ld"
 
+
+# Common prefix of cros compile commands
+#UTILS_CROSS_COMPILE="x86_64-pc-linux-gnu"
+
+
+# Value of CROSS_COMPILE utils variable
+# during kernel compilation
+#KERNEL_CROSS_COMPILE="x86_64-pc-linux-gnu"
+
+
 # =========GENKERNEL LOCATION CONFIGURATION============
 # Variables:
 #   %%ARCH%%  - Final determined architecture
@@ -161,11 +188,16 @@ LOGFILE="/var/log/genkernel.log"
 # Debug Level
 LOGLEVEL=1
 
+# =========COMPILED UTILS CONFIGURATION============
+#
 # Default location of kernel source
 DEFAULT_KERNEL_SOURCE="/usr/src/linux"
 # Default kernel config (only use to override using
 # arch/%%ARCH%%/kernel-config-${VER}.${PAT} !)
 # DEFAULT_KERNEL_CONFIG="${GK_SHARE}/arch/%%ARCH%%/kernel-config"
+
+# Specifies a user created busybox config
+#BUSYBOX_CONFIG="/path/to/file"
 
 BUSYBOX_VER="VERSION_BUSYBOX"
 BUSYBOX_SRCTAR="${DISTDIR}/busybox-${BUSYBOX_VER}.tar.bz2"
@@ -217,3 +249,79 @@ GPG_VER="VERSION_GPG"
 GPG_DIR="gnupg-${GPG_VER}"
 GPG_SRCTAR="${DISTDIR}/gnupg-${GPG_VER}.tar.bz2"
 GPG_BINCACHE="%%CACHE%%/gnupg-${GPG_VER}-%%ARCH%%.bz2"
+
+
+# =========MISC KERNEL CONFIGURATION============
+#
+# Tag the kernel and ramdisk with a name:
+# If not defined the option defaults to
+# 'genkernel'
+#KNAME="genkernel"
+
+
+# This option is only valid if kerncache is
+# defined. If there is a valid kerncache no checks
+# will be made against a kernel source tree
+#NO_KERNEL_SOURCES="1"
+
+
+# Build a static (monolithic kernel)
+#BUILD_STATIC="1"
+
+
+# Make and install kernelz image (PowerPC)
+#GENZIMAGE="1"
+
+
+# File to output a .tar.bz2'd kernel contents
+# of /lib/modules/ and the kernel config
+# NOTE: This is created before the callbacks
+# are run!
+#KERNCACHE="/path/to/file"
+
+
+# Prefix to kernel module destination, modules
+# will be installed in <prefix>/lib/modules
+# (.conf equivalent of --module-prefix=<dir>)
+#INSTALL_MOD_PATH=""
+
+
+# =========MISC INITRD CONFIGURATION============
+#
+# Copy all kernel modules to the ramdisk
+#ALLRAMDISKMODULES="1"
+
+
+# Don't copy any modules to the ramdisk
+#NORAMDISKMODULES="1"
+
+
+# File to output a .tar.bz2'd kernel and ramdisk:
+# No modules outside of the ramdisk will be
+# included...
+#MINKERNPACKAGE="/path/to/file.bz2"
+
+
+# File to output a .tar.bz2'd modules after the
+# callbacks have run
+#MODULESPACKAGE="/path/to/file.bz2"
+
+
+# Directory structure to include in the initramfs,
+# only available on >=2.6 kernels
+#INITRAMFS_OVERLAY=""
+
+
+# Build the generated initramfs into the kernel instead of
+# keeping it as a separate file
+#INTEGRATED_INITRAMFS="1"
+
+
+# Create a self-contained env in the initramfs
+#NETBOOT="1"
+
+
+# =========MISC BOOT CONFIGURATION============
+#
+# Specify a default for real_root=
+#REAL_ROOT="/dev/one/two/gentoo"
