@@ -5,6 +5,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  04 Jun 2011; Sebastian Pipping <sping@gentoo.org> genkernel.conf,
+  maintenance/docmatcher.py:
+  Document remaining options inside genkiernel.conf (bug #367233)
+
   01 Jun 2011; Sebastian Pipping <sping@gentoo.org> defaults/linuxrc,
   doc/genkernel.8.txt:
   Document option lvmraid= and make it imply dolvm (bug #153502)
